Define _CRT_SECURE_NO_WARNINGS in CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,10 @@ cmake_minimum_required(VERSION 3.12)
 
 project(burg)
 
+
 file(GLOB SRC_FILES ${PROJECT_SOURCE_DIR}/*.c)
 
 add_executable(burg ${SRC_FILES})
+if(MSVC)
+  target_compile_definitions(burg PRIVATE _CRT_SECURE_NO_WARNINGS)
+endif()
